SQONE-462 Improve docs for l-container usage, fix width issue for full-bleed blocks.

--- a/wp-content/themes/core/components/blocks/_css/index.pcss
+++ b/wp-content/themes/core/components/blocks/_css/index.pcss
@@ -21,6 +21,7 @@
 	/* CASE: Block is full-bleed */
 	&.c-block--full-bleed {
 		max-width: none;
+		width: 100%;
 	}
 }
 
